--- a/pseudo_dojo/pseudos/ONCVPSP-PBE-PDv0.3/README
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE-PDv0.3/README
@@ -14,7 +14,7 @@ Ne*:
     Ne.psp8: Hard to converge 
 
 Na:
-    Na/Na-sp-gw.in: (no model core charge)
+    Na/Na-sp.psp8: (no model core charge)
 
 Mg:
     Mg.psp8 has ghost at +80 eV, it's the fast low-accuracy version
@@ -96,6 +96,10 @@ pseudo_dojo/pseudos/ONCVPSP-PBE-PDv0.3/Ne/Ne-new.djrepo |  38936 +++++++++++++
 
 
 GGA_X_PBE_SOL = 116 GGA_C_PBE_SOL = 133
+
+LDA_X = 1
+LDA_C_PW = 12
+7: dict(x=xcf.LDA_X, c=xcf.LDA_C_PW),          # PW 001012
 
 W-sp, Re-sp (f channel could be improved)
 
