--- a/pseudo_dojo/pseudos/ONCVPSP-PBE-PDv0.3/README
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE-PDv0.3/README
@@ -14,12 +14,11 @@ Ne*:
     Ne.psp8: Hard to converge 
 
 Na:
-    Na/Na-sp-gw.in: (no model core charge)
-    Na/Na-sp.psp8: (no model core charge)
+    Na/Na-sp.in: (no model core charge)
 
 Mg:
     Mg.psp8 has ghost at +80 eV, it's the fast low-accuracy version
-    Mg-sp-gw.psp8 does not have model core charge.
+    Mg-sp.psp8 does not have model core charge.
 
 Al: oscillations in ffactors, requires GW version
 
@@ -171,13 +170,11 @@ GGA_X_PBE_SOL = 116 GGA_C_PBE_SOL = 133
 
 W-sp, Re-sp (f channel could be improved)
 
-LDA_X = 1
-LDA_C_PW = 12
+LDA_X = 1 LDA_C_PW = 12
 7: dict(x=xcf.LDA_X, c=xcf.LDA_C_PW),          # PW 001012
 
 In-d is very sensitive, changing XC (GGa-->LDA) gives a ghost very close to 0.
 The first s projectors presents oscillations I don't see in the other pseudos.
-
 
 ##################################
 Rb-sp (oscillations in vloc(q))
