--- a/pseudo_dojo/refdata/lantanides/LantanideReference.ipynb
+++ b/pseudo_dojo/refdata/lantanides/LantanideReference.ipynb
@@ -1078,7 +1078,7 @@
    },
    "outputs": [],
    "source": [
-    "DF[['Z', 'ref']].to_json('Lantanide_Nitride_Rocksalt_reference.json')"
+    "DF[['Z', 'ref']].to_json('Lantanide_Nitride_Rocksalt_reference.json', indent=2)"
    ]
   },
   {
