--- a/website/pseudo-dojo.bib
+++ b/website/pseudo-dojo.bib
@@ -43,3 +43,10 @@
   pages = {1246},
 }
 
+@article{vanSetten2018,
+  title = {{The PseudoDojo}: Training and grading a 85 element optimized norm-conserving pseudopotential table},
+  journal = {Comput. Phys. Commun.},
+  year = {2018},
+  doi = {https://doi.org/10.1016/j.cpc.2018.01.012},
+  author = {M.J. {van Setten} and M. Giantomassi and E. Bousquet and M.J. Verstraete and D.R. Hamann and X. Gonze and G.-M. Rignanese},
+}
