paper list html page

--- a/website/pseudo-dojo.bib
+++ b/website/pseudo-dojo.bib
@@ -46,6 +46,8 @@
 @article{vanSetten2018,
   title = {{The PseudoDojo}: Training and grading a 85 element optimized norm-conserving pseudopotential table},
   journal = {Comput. Phys. Commun.},
+  volume = {226},
+  pages = {39-54},
   year = {2018},
   doi = {https://doi.org/10.1016/j.cpc.2018.01.012},
   author = {M.J. {van Setten} and M. Giantomassi and E. Bousquet and M.J. Verstraete and D.R. Hamann and X. Gonze and G.-M. Rignanese},
